--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,5 +11,6 @@
 <body>
   <p>Hlw there this is a new update</p>
   <img src="images/one.jpg" alt="nature">
+  <img src="images/2.jpg" alt="2">
 </body>
 </html>
