--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div >
     <h3>New Blog</h3>
-    <p><span id="Blog-add">habijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabi</span></p>
+    <p><span id="Blog">habijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabihabijabi</span></p>
   </div>
 
   <p>Hlw there this is a new updates</p>
